Fix layout issues

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -237,3 +237,7 @@ ul {
     }
   }
 }
+
+.pagination-wrapper {
+  padding-bottom: 10vh;
+}
