--- a/src/styles/modules/cart.scss
+++ b/src/styles/modules/cart.scss
@@ -15,6 +15,7 @@
   &__container {
     display: flex;
     flex-direction: column;
+    padding-bottom: 20vh;
   }
 
   &__price-container {
