--- a/src/styles/modules/contact.scss
+++ b/src/styles/modules/contact.scss
@@ -1,3 +1,7 @@
+.contact-container {
+  padding-bottom: 20vh;
+}
+
 .hero-contact-banner {
   background-image: url('/fotka.png');
   background-size: cover;
@@ -81,4 +85,3 @@ a.contact-social-icon {
   flex: none;
   width: auto !important;
 }
-
